fixed sizing of qr scanning flash object on Safari

--- a/app/assets/stylesheets/reveal_overrides.scss
+++ b/app/assets/stylesheets/reveal_overrides.scss
@@ -71,4 +71,8 @@
     opacity: .5;
     &:hover { opacity: 1; }
   }
+} // #m-scan-qr
+
+#qr-canvas {
+  display: none;
 }
